# rustql

./: .dockerignore  Cargo.toml  Dockerfile  README.md  docker-compose.yml
.sqlx/: query-0968ff858d649eb400195aa9933401242173b33109175a48f9604873616df62d.json  query-35bbad65b376df91d6d29782f3e39698a5ba1665b2a9874615f97701707b48ae.json  query-68073fb4815dab309c28f17975118c972075006a19ea5abe544dc1643a0f338c.json  query-7f8180b71331d2b03816f5354f02c11e0bd21683db0d04c78b6e552e190871d3.json  query-939d966ee2bfe0ec60cffaa8942a1d2f6630f9484919e3a02912d779fbd2a248.json
crates/rustql-api/: Cargo.toml
crates/rustql-api/src/: auth.rs  cache.rs  lib.rs  rate_limit.rs
crates/rustql-bench/: Cargo.toml
crates/rustql-bench/src/: main.rs
crates/rustql-cli/: Cargo.toml
crates/rustql-cli/src/: main.rs
crates/rustql-core/: Cargo.toml
crates/rustql-core/src/: ast.rs  error.rs  executor.rs  lexer.rs  lib.rs  parser.rs  resolver.rs  safety.rs  schema.rs  testing.rs
crates/rustql-db/: Cargo.toml
crates/rustql-db/src/: connection.rs  lib.rs  migration.rs  query.rs
crates/rustql-macros/: Cargo.toml
crates/rustql-macros/src/: lib.rs
crates/rustql-ws/: Cargo.toml
crates/rustql-ws/src/: lib.rs
my-app/: Cargo.toml
my-app/src/: main.rs
sdks/javascript/: package-lock.json  package.json  test.js
sdks/javascript/src/: index.ts
sdks/python/: setup.py  test.py
sdks/python/rustql/: __init__.py  client.py
