[package]
name = "rustql-api"
version = "0.1.0"
edition = "2021"

[dependencies]
rustql-core = { path = "../rustql-core" }
tokio = { version = "1", features = ["full"] }
axum = "0.7"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tower-http = { version = "0.5", features = ["cors"] }
jsonwebtoken = { version = "10.4.0", features = ["rust_crypto"] }
bcrypt = "0.19.2"
chrono = "0.4.45"
