[package]
name = "rustql-cli"
version = "0.1.0"
edition = "2021"

[dependencies]
rustql-core = { path = "../rustql-core" }
rustql-api = { path = "../rustql-api" }
rustql-db = { path = "../rustql-db" }
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.9.0", features = ["runtime-tokio", "tls-rustls", "postgres", "macros"] }
